--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-image: linear-gradient(#f6d99c, #e9723a);
     text-align: center;
-    color: white !important;
+    color: white;
 }
 
 ul {
@@ -26,4 +26,5 @@ li {
 
 .links a {
     text-decoration: none;
+    color: white;
 }
