--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     background-image: linear-gradient(#f6d99c, #e9723a);
     text-align: center;
     color: white;
+    outline: black;
 }
 
 ul {
