--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 body {
     background-image: linear-gradient(#f6d99c, #e9723a);
     text-align: center;
-    color: white;
-    outline: black;
+    color: #504646;
 }
 
 ul {
@@ -27,5 +26,5 @@ li {
 
 .links a {
     text-decoration: none;
-    color: white;
+    color: #504646;
 }
