new styles and intro badges

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,3 +22,8 @@ span {
     color: #fff !important;
     background-color: #e592d2;
 }
+
+.text-bg-purple {
+    color: #fff !important;
+    background-color: #9d75b4;
+}
